--- a/pkgsrc/chromium/patches/patch-net_dns_BUILD.gn
+++ b/pkgsrc/chromium/patches/patch-net_dns_BUILD.gn
@@ -14,7 +14,19 @@ $NetBSD$
      sources += [
        "dns_config_service_linux.cc",
        "dns_config_service_linux.h",
-@@ -179,6 +179,7 @@ source_set("dns") {
+@@ -171,7 +171,10 @@ source_set("dns") {
+     ]
+   }
+ 
+-  deps = [ "//net:net_deps" ]
++  deps = [
++    "//net:net_deps",
++    "///services/screen_ai/buildflags",
++  ]
+ 
+   public_deps = [
+     ":dns_client",
+@@ -179,6 +182,7 @@ source_set("dns") {
      ":host_resolver_manager",
      ":mdns_client",
      "//net:net_public_deps",
@@ -22,7 +34,7 @@ $NetBSD$
    ]
  
    allow_circular_includes_from = [
-@@ -447,9 +448,9 @@ source_set("tests") {
+@@ -447,9 +451,9 @@ source_set("tests") {
  
    if (is_android) {
      sources += [ "dns_config_service_android_unittest.cc" ]
