--- a/makepkg/arch-audit/PKGBUILD
+++ b/makepkg/arch-audit/PKGBUILD
@@ -8,21 +8,25 @@ pkgrel=2.1
 pkgdesc='A utility like pkg-audit based on Arch Security Team data'
 url='https://gitlab.com/ilpianista/arch-audit'
 depends=('glibc' 'gcc-libs' 'curl' 'libalpm.so')
-makedepends=('cargo' 'pkg-config' 'scdoc')
+makedepends=('cargo' 'pkg-config' 'scdoc' 'rust-bindgen')
 arch=('x86_64' 'aarch64')
 license=('MIT')
 backup=('etc/arch-audit/settings.toml')
 source=("https://gitlab.com/ilpianista/arch-audit/-/archive/${pkgver}/arch-audit-${pkgver}.tar.gz"
-        "0001-Update-to-alpm-v3.patch")
+        "0001-Update-to-alpm-v3.patch"
+        "0002-update-quote.patch")
 sha512sums=('e0bdd5adb3c44677d39c8e618c8c8f666f1e2caaead82fc666468c46b296cb4d15584939715995bc6d3d8f996bd3127478bc6008dbdef677fee80063f2bc059e'
+            'SKIP'
             'SKIP')
 b2sums=('02ba56f1b4780da7e006ac25736afb6e0474502cc7d645b2eb48650c6d71878b1de349b9a072f2cd1d013254f68d79786d9195c98c520407e256e6fa9b63f2e4'
+        'SKIP'
         'SKIP')
 options=(!lto)
 
 prepare() {
   cd "${pkgname}-${pkgver}"
   patch -Np1 < "../0001-Update-to-alpm-v3.patch"
+  patch -Np1 < "../0002-update-quote.patch"
 }
 
 build() {
