--- a/pkgsrc/chromium/patches/patch-build_toolchain_gcc__toolchain.gni
+++ b/pkgsrc/chromium/patches/patch-build_toolchain_gcc__toolchain.gni
@@ -20,6 +20,15 @@ $NetBSD$
  # This template defines a toolchain for something that works like gcc
  # (including clang).
  #
+@@ -615,7 +622,7 @@ template("single_gcc_toolchain") {
+       # We need to specify link groups, at least, for single pass linkers. I.e.
+       # Rust libraries are alpha-sorted instead of by dependencies so they fail
+       # to link if not properly ordered or grouped.
+-      link_command = "$ld {{ldflags}}${extra_ldflags} -o \"$unstripped_outfile\" $start_group_flag @\"$rspfile\" $end_group_flag {{solibs}} {{libs}} $start_group_flag {{rlibs}} $end_group_flag"
++      link_command = "$ld $start_group_flag {{ldflags}}${extra_ldflags} -o \"$unstripped_outfile\" @\"$rspfile\" {{solibs}} {{libs}} {{rlibs}} $end_group_flag"
+ 
+       # Generate a map file to be used for binary size analysis.
+       # Map file adds ~10% to the link time on a z620.
 @@ -864,22 +871,12 @@ template("gcc_toolchain") {
  # actually just be doing a native compile.
  template("clang_toolchain") {
